--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-p {
-    font-size: 17px;
-}
-
 p,
 h1,
 h2 {
@@ -14,6 +10,37 @@ h2 {
     text-align: left;
     color: #000000;
     font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+p,
+div,
+img {
+    margin-bottom: 1rem;
+}
+
+section,
+div,
+footer,
+nav {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+footer {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+h1 {
+    font-size: 1.875rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 
 header {
