changed font-size of buttons

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ b {
     background-color: #2c88ff;
     padding: .7rem 20%;
     border-radius: 2em;
+    font-size: 15px;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
